# fogml_sdk_zscore_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  data.txt
gaussian_generator/: main.py
src/: main.c
